# MedicalAI_Agent

./: README.md  package-lock.json  package.json  pyproject.toml  replit.nix  structure.py  terminal.md  theme.json
app/: __init__.py  api.py  auth.py  chatbot.py  models.py  translation_server.py  translations.py
app/chat/: __init__.py
app/chatbot/: __init__.py  base.py  document_processor.py  huggingface_model.py  llama_model.py  openai_model.py  preventive_care.py  risk_assessment.py  service.py  triage_system.py
app/data/: medical_knowledge.json
app/services/: appointment_optimizer.py
app/translations/: medical_terms_en.json  medical_terms_es.json
attached_assets/: Pasted--Can-you-please-translate-it-into-English-and-create-a-diagram-for-this-project-including-a-project-1737571945005.txt
client/src/: App.tsx  index.css
client/src/components/: appointment-form.tsx  document-manager.tsx  message-hub.tsx  risk-visualizer.tsx  symptom-journey.tsx  video-call.tsx
client/src/components/ui/: accessibility-menu.tsx  chat-widget.tsx  dialog.tsx  theme-toggle.tsx
client/src/hooks/: use-appointments.ts  use-user.ts
client/src/lib/: queryClient.ts  translation-service.ts
client/src/pages/: about.tsx  auth-page.tsx  contact.tsx  dashboard.tsx  features.tsx  home.tsx  symptom-visualization.tsx
client/src/pages/dashboard/: admin.tsx  doctor.tsx  patient.tsx
db/: schema.ts
migrations/: env.py
migrations/versions/: add_appointment_optimizer_tables.py  add_chat_sessions.py  add_language_support.py  add_messages_table.py  add_preventive_care_recommendations.py
notebooks/: medical_chatbot_demo.ipynb
server/: auth.ts  index.ts  routes.ts
