[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-reuploaded>=1.4.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "openai>=1.60.0",
    "transformers>=4.48.1",
    "torch>=2.5.1",
    "sentencepiece>=0.2.0",
    "accelerate>=1.3.0",
    "langchain>=0.3.15",
    "faiss-cpu>=1.9.0.post1",
    "sentence-transformers>=3.3.1",
    "pymupdf>=1.25.2",
    "python-multipart>=0.0.20",
    "flask-babel>=4.0.0",
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
    "langchain-community>=0.3.15",
    "alembic>=1.14.1",
    "numpy>=1.26.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "werkzeug>=3.1.3",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
